fix z-index issues on sticky-disabled elements. (#848)

--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -97,6 +97,7 @@ slot:not([name]) {
 :host([disable-sticky~='menu']) [part~='menu'] {
   position: static;
   overflow: unset;
+  z-index: unset;
 }
 
 :host([disable-sticky~='aside']) [part~='aside'],
